2001-02-10  Nick Clifton  <nickc@redhat.com>

	* binutils.texi: Document new --unwind option to readelf.

2001-02-09  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* readelf.c: Add linux target for S/390.

2001-02-10  Alan Modra  <alan@linuxcare.com.au>

	* nm.c (print_symbol_info_bsd): Don't #ifdef inside printf in case
	printf is a macro.

2001-02-08  Hans-Peter Nilsson  <hp@bitrange.com>

	* acinclude.m4 (AM_PROG_LEX): Override installed definition.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-02-07  Todd Vierling  <tv@wasabisystems.com>

	* bucomm.c (bfd_target_vector): Change extern array to pointer.
	* objdump.c (bfd_target_vector): Likewise.

2001-02-07  David Mosberger  <davidm@hpl.hp.com>

	* readelf.c (process_unwind): New function.
	(slurp_ia64_unwind_table): Ditto.
	(dump_ia64_unwind): Ditto.
	(find_symbol_for_address): Ditto.
	(slurp_rela_relocs): New function (split off from dump_relocations()).
	(slurp_rel_relocs): Ditto.
	(parse_args): Handle '-u' option.

	* unwind-ia64.c: New file.
	* unwind-ia64.h: New file.
	* Makefile.am: Include unwind-ia64.c in readelf build.
	* Makefile.in: Regenerate.
	* po/binutils.pot: Regenerate.

2001-02-04  Philip Blundell  <philb@gnu.org>

	* configure.in (OBJDUMP_DEFS): Match `arm*-*', not just `arm-*'.
	* configure: Regenerate.

2001-01-31  Steve deRosier  <sderosier@vari-lite.com>

	* ieee.c (ieee_add_bb11): Don't check for backslashes
	unless HAVE_DOS_BASED_FILE_SYSTEM is defined.

2001-01-24  Mark Elbrecht  <snowball3@bigfoot.com>

	* ieee.c: Update copyright.
	(ieee_start_compilation_unit): Don't check for backslashes
	unless HAVE_DOS_BASED_FILE_SYSTEM is defined.

	* stabs.c: Update copyright. Include "filenames.h".
	(parse_stab): Use IS_ABSOLUTE_PATH. Ignore N_WARNING stabs.

2001-01-23  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (process_version_sections): Check if VERDEF or VERNEED
	sections are present before using them.  Remove code duplication.